# NextDrop

./: NextDrop.py  README.md  gui.py  main.py  nextdrop3.py  pyproject.toml  requirements.txt  setup.py
UDPDrop/: main.py
src/next_drop_lib/: file_receiver.py  file_sender.py
